--- a/src/Components/Nav/styles.css
+++ b/src/Components/Nav/styles.css
@@ -51,8 +51,13 @@
   border-radius: 0;
   border: 0;
   font-size: 2rem;
+  font-weight: 900;
   background: transparent;
   color: white;
+}
+.Container__SearchInput::placeholder {
+  opacity: 1;
+  font-weight: bold;
 }
 .Container__IconsContainer {
   margin-left: auto;
