--- a/src/Containers/App.css
+++ b/src/Containers/App.css
@@ -1,5 +1,6 @@
 .Container{
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
 }
 .Container__ContentContainer {
   display: flex;
@@ -7,10 +8,12 @@
 }
 .Container__InputContainer {
   width: 100%;
-  height: 100%;
+  margin: 0 auto;
+  max-width: 120rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 .Container__SpinnerContainer {
   width: 100%;
@@ -29,7 +32,11 @@
   height: 100%;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  padding: 3rem 1rem 1rem;;
+  justify-content: space-around;
+}
+.Container__NotesCol {
+  display: flex;
+  width: 25%;
+  flex-direction: column;
+  align-items: center;
 }
